--- a/no3.html
+++ b/no3.html
@@ -31,7 +31,7 @@
       ></script>
 
       <h1>Lại No nữa à😭</h1>
-      <p>Éo cho ấn No nữaaaa</p>
+      <p>Thử ấn No nữa xemmmm</p>
 
       <div class="btn">
         <a href="yes.html">Yes</a>
