--- a/yes.html
+++ b/yes.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Iu Main Anh</title>
+    <title>Iu Mai Anh</title>
 
     <link rel="stylesheet" href="./style.css" />
   </head>
