--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         src="https://tenor.com/embed.js"
       ></script>
       <h1>Pé có iu Zũ hơmmm? 🤗</h1>
-      <p>Iu thì trả lời anhhhhh</p>
+      <p>Iu thì trả lời nhanhhhhh</p>
 
       <div class="btn">
         <a href="yes.html">Yes</a>
